[gd_scene load_steps=37 format=3 uid="uid://mu7j26by23js"]

[ext_resource type="Script" path="res://Scripts/Multiplayer/FacilityManager.gd" id="1_crbgh"]
[ext_resource type="Resource" uid="uid://dexygxjm8ki08" path="res://Scripts/GameData/GameData.tres" id="2_m6y5b"]
[ext_resource type="Environment" uid="uid://cpjkvy5s2l8ae" path="res://DefaultGraphics.tres" id="5_u1dtw"]
[ext_resource type="FontFile" uid="uid://c5notad62nmgy" path="res://Assets/Fonts/SansNormalcy/Normalcy-v0.1.7.otf" id="6_y6gcv"]
[ext_resource type="Texture2D" uid="uid://bmw4fxmnmwhov" path="res://Assets/HUD/arrow.png" id="7_bwdaw"]
[ext_resource type="PackedScene" uid="uid://dxk8akb87bv4u" path="res://Assets/Models/startroom.tscn" id="8_1kvjl"]
[ext_resource type="Script" path="res://Scripts/UI/PlayerUI.gd" id="8_7mmlb"]
[ext_resource type="Texture2D" uid="uid://di4n3rx3yssbr" path="res://Assets/HUD/healthbar_unfilled.png" id="9_0hc6d"]
[ext_resource type="Texture2D" uid="uid://bvq1xok1sqfjb" path="res://Assets/HUD/healthbar_filled.png" id="10_itug4"]
[ext_resource type="FontFile" uid="uid://d2jfq3itdwpdu" path="res://Assets/Fonts/Tektur/Tektur-Bold.ttf" id="11_1xteb"]
[ext_resource type="Script" path="res://Scripts/FPSCounter.gd" id="11_vy51m"]
[ext_resource type="FontFile" uid="uid://cimfjaj14234d" path="res://Assets/Fonts/Tektur/Tektur-Medium.ttf" id="12_118v5"]
[ext_resource type="Script" path="res://Scripts/TargetsCounter.gd" id="12_abhsj"]
[ext_resource type="Script" path="res://Scripts/AdminSystem/AdminConsole.gd" id="13_jxcf4"]
[ext_resource type="Script" path="res://MapGen/MapGen.gd" id="14_2e1xu"]
[ext_resource type="Texture2D" uid="uid://6h26sle4bliy" path="res://Assets/HUD/RoundProgressBar.png" id="14_qvnuh"]
[ext_resource type="Script" path="res://Scripts/AdminSystem/AdminCommands.gd" id="15_0xt4j"]
[ext_resource type="Texture2D" uid="uid://dj66rmlusn18r" path="res://Assets/HUD/healthbar.png" id="15_5ah0v"]
[ext_resource type="Script" path="res://MapGen/MapGenRoomResource.gd" id="15_daey2"]
[ext_resource type="Theme" uid="uid://4k2un7nm7xc6" path="res://UITheme.tres" id="15_g2wd3"]
[ext_resource type="Script" path="res://Scripts/MapObjectManager.gd" id="15_gr07b"]
[ext_resource type="Texture2D" uid="uid://d05j1wwst8bkf" path="res://Assets/HUD/RoundProgressBarFill.png" id="15_jxsrf"]
[ext_resource type="Resource" uid="uid://7prvjngodfs1" path="res://MapGen/lcz.tres" id="16_r0s7q"]
[ext_resource type="Script" path="res://Scripts/LongActionProgressBar.gd" id="16_y4cn1"]
[ext_resource type="Script" path="res://Scripts/Multiplayer/RoundStats.gd" id="17_mb1vw"]
[ext_resource type="Script" path="res://Scripts/GameoverPit.gd" id="19_4u3wc"]
[ext_resource type="PackedScene" uid="uid://d071rcpik15br" path="res://Assets/Rooms/static/pd_basement.tscn" id="27_4yagn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4g4w"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id="Animation_wnm84"]
resource_name = "forceclass"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClassInfo:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-128, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -128, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 3.9, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClassDescription:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-424, -0.25, 0, 0.25, 0, -424, -0.25, 0, 0.25, 0, 168, -0.25, 0, 0.25, 0, 168, -0.25, 0, 0.25, 0, -424, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.9, 4.1, 5)
}

[sub_resource type="Animation" id="Animation_0y8ye"]
resource_name = "roundend"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameEnd:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-328, -0.25, 0, 0.25, 0, 96, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icbbs"]
_data = {
"forceclass": SubResource("Animation_wnm84"),
"roundend": SubResource("Animation_0y8ye")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wvqa"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_aegjm"]
resource_name = "music_change"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1eqc"]
_data = {
"music_change": SubResource("Animation_aegjm")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pw38j"]
properties/0/path = NodePath(".:players_list")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:is_round_started")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("FacilityGenerator:rng_seed")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("RoundStats:tasks")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("RoundStats:generators")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("RoundStats:scp_targets")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("RoundStats:scp_amount")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("RoundStats:generator_spawns")
properties/7/spawn = true
properties/7/replication_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_7svji"]
size = Vector3(2508.41, 33.7658, 1977.69)

[node name="Game" type="Node3D"]
script = ExtResource("1_crbgh")
game_data = ExtResource("2_m6y5b")
music_to_play = Array[String](["res://Sounds/Music/lcz_ambient.wav"])

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_7mmlb")

[node name="Cursor" type="TextureRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_bwdaw")

[node name="PreRoundStartPanel" type="Panel" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -124.0
offset_right = 232.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x4g4w")

[node name="PreRoundStart" type="VBoxContainer" parent="PlayerUI/PreRoundStartPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -21.0
offset_right = 221.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="Welcome" type="Label" parent="PlayerUI/PreRoundStartPanel/PreRoundStart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 32
text = "ROUNDSTART_INFO"
horizontal_alignment = 1

[node name="Amount" type="Label" parent="PlayerUI/PreRoundStartPanel/PreRoundStart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="Welcome2" type="Label" parent="PlayerUI/PreRoundStartPanel/PreRoundStart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 24
text = "ROUNDSTART_PLAYERS"
horizontal_alignment = 1

[node name="ClassInfo" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = -128.0
offset_right = 704.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassDescription" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = -424.0
offset_right = 704.0
offset_bottom = -128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="GameEnd" type="RichTextLabel" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
offset_top = -328.0
offset_right = 896.0
offset_bottom = -192.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("12_118v5")
theme_override_fonts/bold_font = ExtResource("11_1xteb")
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true

[node name="HealthBarIcon" type="TextureRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.959
anchor_right = 0.015
anchor_bottom = 0.959
offset_left = -12.8
offset_top = -11.7201
offset_right = 11.2
offset_bottom = 12.2799
grow_vertical = 0
texture = ExtResource("15_5ah0v")

[node name="HealthBar" type="TextureProgressBar" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.941
anchor_right = 0.25
anchor_bottom = 0.985
offset_left = 0.32
offset_top = -0.280029
offset_right = -6.10352e-05
offset_bottom = 0.199951
grow_vertical = 0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("9_0hc6d")
texture_progress = ExtResource("10_itug4")

[node name="Counter" type="Label" parent="PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
text = "FPS"
script = ExtResource("11_vy51m")

[node name="Targets" type="Label" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
script = ExtResource("12_abhsj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerUI"]
libraries = {
"": SubResource("AnimationLibrary_icbbs")
}

[node name="AdminConsole" type="Panel" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -130.0
offset_right = 344.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wvqa")
script = ExtResource("13_jxcf4")

[node name="Label" type="Label" parent="PlayerUI/AdminConsole"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 32
text = "ADMIN_PANEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PlayerUI/AdminConsole"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.338
anchor_right = 0.5
anchor_bottom = 0.338
offset_left = -104.5
offset_top = -17.88
offset_right = 104.5
offset_bottom = 18.12
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "ABOUT_ADMIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueBtn" type="Button" parent="PlayerUI/AdminConsole"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.221
anchor_top = 0.804
anchor_right = 0.221
anchor_bottom = 0.804
offset_left = -128.048
offset_top = -23.944
offset_right = 127.952
offset_bottom = 24.056
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("15_g2wd3")
text = "ENTER_ADMIN_PANEL"

[node name="SendInviteBtn" type="Button" parent="PlayerUI/AdminConsole"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.779
anchor_top = 0.801
anchor_right = 0.779
anchor_bottom = 0.801
offset_left = -127.952
offset_top = -23.086
offset_right = 128.048
offset_bottom = 24.914
text = "SEND_INVITE"

[node name="Label3" type="Label" parent="PlayerUI/AdminConsole"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -23.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "NOT_ADMIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerListPanel" type="Panel" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.0
offset_top = -448.0
offset_right = 516.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wvqa")

[node name="PlayerList" type="VBoxContainer" parent="PlayerUI/PlayerListPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -372.0
offset_right = 488.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlayerUI/PlayerListPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 32
text = "PLAYERS_LIST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PlayerUI/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.237
anchor_bottom = 1.0
offset_right = 0.959961
grow_horizontal = 2
grow_vertical = 2

[node name="ExitButton" type="Button" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.089
anchor_right = 0.491
anchor_bottom = 0.089
offset_left = -191.896
offset_top = -32.12
offset_right = 192.104
offset_bottom = 31.88
theme = ExtResource("15_g2wd3")
theme_override_font_sizes/font_size = 24
text = "EXIT"

[node name="UnreadInvites" type="Label" parent="PlayerUI/PauseMenu/Panel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -56.0
offset_right = 220.0
grow_horizontal = 2
grow_vertical = 0
text = "UNREAD_INVITES_INFORMATION"

[node name="Goals" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.237
anchor_bottom = 0.237
offset_top = -191.96
offset_right = 448.0
offset_bottom = 192.04
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_y6gcv")
theme_override_font_sizes/font_size = 32

[node name="TextureProgressBar" type="TextureProgressBar" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
step = 0.063
fill_mode = 4
texture_under = ExtResource("14_qvnuh")
texture_progress = ExtResource("15_jxsrf")
script = ExtResource("16_y4cn1")

[node name="RoundStats" type="Node" parent="."]
script = ExtResource("17_mb1vw")

[node name="AdminCommands" type="Node" parent="."]
script = ExtResource("15_0xt4j")

[node name="Items" type="Node" parent="."]
script = ExtResource("15_gr07b")
object_type = 2

[node name="MapObjects" type="Node" parent="."]
script = ExtResource("15_gr07b")

[node name="FacilityGenerator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 129.962, 0)
script = ExtResource("14_2e1xu")
rooms = Array[ExtResource("15_daey2")]([ExtResource("16_r0s7q")])
size = 12
room_amount = 0.5

[node name="Ragdolls" type="Node3D" parent="."]

[node name="NPCs" type="Node" parent="."]
script = ExtResource("15_gr07b")
object_type = 1

[node name="Decals" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_u1dtw")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
volume_db = -3.2
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y1eqc")
}

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://FPSController/PlayerScene.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pw38j")

[node name="StartRoom" parent="." instance=ExtResource("8_1kvjl")]

[node name="Gameover" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1024, 0)
collision_layer = 7
collision_mask = 7
script = ExtResource("19_4u3wc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gameover"]
shape = SubResource("BoxShape3D_7svji")

[node name="Label3D" type="Label3D" parent="."]

[node name="PD_basement" parent="." instance=ExtResource("27_4yagn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -256, 0)

[connection signal="visibility_changed" from="PlayerUI/Targets" to="PlayerUI/Targets" method="_on_visibility_changed"]
[connection signal="pressed" from="PlayerUI/AdminConsole/ContinueBtn" to="PlayerUI/AdminConsole" method="_on_continue_btn_pressed"]
[connection signal="pressed" from="PlayerUI/AdminConsole/SendInviteBtn" to="PlayerUI/AdminConsole" method="_on_send_invite_btn_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/ExitButton" to="PlayerUI" method="_on_exit_button_pressed"]
[connection signal="value_changed" from="PlayerUI/TextureProgressBar" to="PlayerUI/TextureProgressBar" method="_on_value_changed"]
[connection signal="visibility_changed" from="PlayerUI/TextureProgressBar" to="PlayerUI/TextureProgressBar" method="_on_visibility_changed"]
[connection signal="generated" from="FacilityGenerator" to="RoundStats" method="_on_facility_generator_generated"]
[connection signal="body_entered" from="Gameover" to="Gameover" method="_on_body_entered"]
